# apps/api/internal/progress/copyfrom.go
@@ -1,0 +1,47 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.30.0
+// source: copyfrom.go
+
+package progress
+
+import (
+	"context"
+)
+
+// iteratorForInsertAttempts implements pgx.CopyFromSource.
+type iteratorForInsertAttempts struct {
+	rows                 []InsertAttemptsParams
+	skippedFirstNextCall bool
+}
+
+func (r *iteratorForInsertAttempts) Next() bool {
+	if len(r.rows) == 0 {
+		return false
+	}
+	if !r.skippedFirstNextCall {
+		r.skippedFirstNextCall = true
+		return true
+	}
+	r.rows = r.rows[1:]
+	return len(r.rows) > 0
+}
+
+func (r iteratorForInsertAttempts) Values() ([]interface{}, error) {
+	return []interface{}{
+		r.rows[0].UserID,
+		r.rows[0].TaskID,
+		r.rows[0].Slot,
+		r.rows[0].Correct,
+		r.rows[0].Source,
+		r.rows[0].CreatedAt,
+	}, nil
+}
+
+func (r iteratorForInsertAttempts) Err() error {
+	return nil
+}
+
+func (q *Queries) InsertAttempts(ctx context.Context, arg []InsertAttemptsParams) (int64, error) {
+	return q.db.CopyFrom(ctx, []string{"attempts"}, []string{"user_id", "task_id", "slot", "correct", "source", "created_at"}, &iteratorForInsertAttempts{rows: arg})
+}
